tests/files/type_checker_tests/should_fail/072.cmdr
//Should fail using alias variables inappropriately
alias x = ls;
println x;
